--- a/php_session_example/.htaccess
+++ b/php_session_example/.htaccess
@@ -1,13 +1,8 @@
 
-# BEGIN WordPress
+# BEGIN
 <IfModule mod_rewrite.c>
 RewriteEngine On
-Options -Indexes
-RewriteBase /
-# php_value upload_max_filesize 50M
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?/$1 [L]
+RewriteCond %{REQUEST_URI} !public_html/
+RewriteRule (.*) public_html/$1 [L]
 </IfModule>
-
-# END WordPress
+# END
